:memo: writing the TESS lightcurve analysis section

--- a/document/paper1/ms.bib
+++ b/document/paper1/ms.bib
@@ -5132,20 +5132,38 @@ I. Clear and Cloudy Atmospheres}},
 }
 
 
-@ARTICLE{2017MNRAS.470.1140B,
-       author = {{Bedin}, L.~R. and {Pourbaix}, D. and {Apai}, D. and {Burgasser}, A.~J. and {Buenzli}, E. and {Boffin}, H.~M.~J. and {Libralato}, M.},
-        title = "{Hubble Space Telescope astrometry of the closest brown dwarf binary system - I. Overview and improved orbit$^{★}$}",
-      journal = {\mnras},
-     keywords = {astrometry, binaries: visual, brown dwarfs, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Earth and Planetary Astrophysics},
-         year = 2017,
-        month = sep,
-       volume = {470},
-       number = {1},
-        pages = {1140-1155},
-          doi = {10.1093/mnras/stx1177},
-archivePrefix = {arXiv},
-       eprint = {1706.00657},
- primaryClass = {astro-ph.SR},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2017MNRAS.470.1140B},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+@article{2017MNRAS.470.1140B,
+  author        = {{Bedin}, L.~R. and {Pourbaix}, D. and {Apai}, D. and {Burgasser}, A.~J. and {Buenzli}, E. and {Boffin}, H.~M.~J. and {Libralato}, M.},
+  title         = {{Hubble Space Telescope astrometry of the closest brown dwarf binary system - I. Overview and improved orbit$^{★}$}},
+  journal       = {\mnras},
+  keywords      = {astrometry, binaries: visual, brown dwarfs, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Earth and Planetary Astrophysics},
+  year          = 2017,
+  month         = sep,
+  volume        = {470},
+  number        = {1},
+  pages         = {1140-1155},
+  doi           = {10.1093/mnras/stx1177},
+  archiveprefix = {arXiv},
+  eprint        = {1706.00657},
+  primaryclass  = {astro-ph.SR},
+  adsurl        = {https://ui.adsabs.harvard.edu/abs/2017MNRAS.470.1140B},
+  adsnote       = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+
+@article{2020RNAAS...4..251F,
+  author   = {{Fausnaugh}, Michael M. and {Burke}, Christopher J. and {Ricker}, George R. and {Vanderspek}, Roland},
+  title    = {{Calibrated Full-frame Images for the TESS Quick Look Pipeline}},
+  journal  = {Research Notes of the American Astronomical Society},
+  keywords = {Astronomy data reduction, Astronomy data analysis, 1861, 1858},
+  year     = 2020,
+  month    = dec,
+  volume   = {4},
+  number   = {12},
+  eid      = {251},
+  pages    = {251},
+  doi      = {10.3847/2515-5172/abd63a},
+  adsurl   = {https://ui.adsabs.harvard.edu/abs/2020RNAAS...4..251F},
+  adsnote  = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
