--- a/notebooks/02_lightcurves/TICA_early_release_Sector36.ipynb
+++ b/notebooks/02_lightcurves/TICA_early_release_Sector36.ipynb
@@ -131,6 +131,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(tica_fns)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
