:art: add a TESS Sector 36 lightcurve plot to the paper

--- a/document/paper1/ms.tex
+++ b/document/paper1/ms.tex
@@ -57,8 +57,8 @@ Luhman~16 appears near a local maximum of projected sky separation in 2021, with
 
 \begin{figure*}[ht]
   \centering
-    \includegraphics[width=1.8in]{figures/DS9_HST_zoom_in_matched.png}
-    \includegraphics[width=1.8in]{figures/DS9_IGRINS_SVC_zoom_in.png} \\
+    \includegraphics[width=1.9in]{figures/DS9_HST_zoom_in_matched.png}
+    \includegraphics[width=1.9in]{figures/DS9_IGRINS_SVC_zoom_in.png} \\
 \caption{Imaging of Luhman~16, with North up and East to the left.  \texttt{Left:} \emph{Hubble Space Telescope} WFC3/UVIS/F814W mosaic from 12 visits of in 2014.638 to 2016.757 \citep{2017MNRAS.470.1140B}.  The thin blue line illustrates the approximate path of the proper motion, with a thin red circle denoting the binary's approximate expected position for 2021. A $21'' \times 21''$ postage stamp---equal to the size of one TESS pixel---appears as a dashed cyan square.  \texttt{Right:} The IGRINS $K-$band Slit Viewing Camera (SVC) at Gemini South on March 11, 2021.  The expected P.A. of the AB components was intentionally aligned perpendicular to the $0\farcs34 \times 5\farcs0$ IGRINS slit, seen as a black diagonal silhouette. Seven faint background reference stars common to both images are circled in green.  TESS Full Frame Images (not shown) and resulting lightcurves consist of the integrated light from both components.  The A component is to the northwest (upper right) with the B component to the southeast (lower left).  The magenta dashed circle shows the extent of the (vignetted) SVC.}
 \label{fig:imaging}
 \end{figure*}
@@ -87,13 +87,20 @@ Table \ref{table1} lists the BTJD of each binary component on each night.
 
 \subsection{TESS lightcurves}
 
-TESS observed Luhman~16 in Sectors 36 and 37 with 10-minute cadence in the Full-Frame Images (FFI).  It was not preselected for 2-minute or shorter cadences.  For Sector 36, we retrieved $3477$ calibrated, Early Release Full Frame Image TICA products \citep{2020RNAAS...4..251F} from \emph {TESS} Camera 3 CCD 1, hosted on \emph{MAST}.  We extracted $17$-pixel square postage stamps centered on the expected $x,y$ coordinates of Luhman~16 $(538, 155)$, discarding the rest of the voluminous FFI.  We assigned a 2-pixel target aperture based on those central pixels routinely exceeding the median of the $17\times17\times3477$ datacube. We constructed a non-contiguous 68-pixel background mask of those pixels in the bottom $15^{th}$ percentile of a median-combined-flux image and greater than 15 pixels away from the postage-stamp center position. The background-subtracted lightcurve was trimmed to remove portions of the data degraded by thermal settling immediately after data downlinks and fine-point acquisition.  We also removed conspicuous outliers 3 standard deviations above or below the median flux.  The final Sector 36 flux time-series contains XX time-points.  We adapted the same process for Camera 3 CCD 2 in Sector 37, yielding a lightcurve of XX time-points.  The two lightcurves were normalized to their median value.  No attempt was made to vertically register the two lightcurves to each other so that the end of Sector 36 would appear in-phase with the start of Sector 37.
+TESS observed Luhman~16 in Sectors 36 and 37 with 10-minute cadence in the Full-Frame Images (FFI).  It was not preselected for 2-minute or shorter cadences.  For Sector 36, we retrieved $3477$ calibrated, Early Release Full Frame Image TICA products \citep{2020RNAAS...4..251F} from \emph {TESS} Camera 3 CCD 1, hosted on \emph{MAST}.  We extracted $17$-pixel square postage stamps centered on the expected $x,y$ coordinates of Luhman~16 $(538, 155)$, discarding the rest of the voluminous FFI.  We assigned a 2- to 4-pixel target aperture based on those central pixels routinely exceeding a threshold above the median of the $17\times17\times3477$ datacube. We constructed a non-contiguous 68-pixel background mask of those pixels in the bottom $15^{th}$ percentile of a median-combined-flux image and greater than 15 pixels away from the postage-stamp center position. The background-subtracted lightcurve was trimmed to remove portions of the data degraded by thermal settling immediately after data downlinks and fine-point acquisition.  We also removed conspicuous outliers 3 standard deviations above or below the median flux.  The final Sector 36 flux time-series contained 3087 time-points.  We adapted the same process for Camera 3 CCD 2 in Sector 37, yielding a 23.7-day lightcurve of 3109 time-points.  The two lightcurves were normalized to their median value.  No attempt was made to vertically register the two lightcurves.
 
-We also extracted the Sector 10 30-minute cadence lightcurve using a similar methodology, adapted in the following way.  We retrieved a sequence of $16\times51$ TESS FFI cutouts as a Target Pixel File (TPF) using the \emph{TESScut} tool hosted on \emph{MAST}.  We used a 4-pixel target aperture and tolerated background pixels at any separation from the target.
+We also extracted the Sector 10 30-minute cadence lightcurve using a similar methodology, adapted in the following way.  We retrieved a sequence of $16\times51$ TESS FFI cutouts as a Target Pixel File (TPF) using the \emph{TESScut} tool hosted on \emph{MAST}.  We used a 4-pixel target aperture and tolerated background pixels at any separation from the target.  The final Sector 10 lightcurve possessed 971 time points spanning 23.6 days.
 
-The Sector 10, 36, and 37 lightcurves are shown in Figure XX, annotated with the acquisition times of the contemporaneous IGRINS spectroscopy.  The reduced TESS lightcurves, IGRINS data, and reproducible reduction scripts are publicly available\footnote{\url{https://github.com/BrownDwarf/varsity}}.
+The Sector 10, 36, and 37 lightcurves are shown in Figures XX, \ref{fig:Sector36}, and ZZ.  Figure \ref{fig:Sector36} indicates the acquisition times of the contemporaneous IGRINS spectroscopy.  The reduced TESS lightcurves, IGRINS data, and reproducible reduction scripts are publicly available\footnote{\url{https://github.com/BrownDwarf/varsity}}.
 
-Figure XX overplots the Sector 10 \texttt{PATHOS} lightcurve of \citet{2021ApJ...906...64A} with our custom reduction.  We see excellent agreement between the two methods.  Our approach apparently offers a more stable lightcurve during the thermal settling windows, with recovery of up to $10\%$ additional time-points residing near the mean-line trend.
+\begin{figure*}[ht]
+  \centering
+    \includegraphics[width=\textwidth]{figures/TESS_S36_O1_IGRINS_overlay.png} \\
+\caption{\emph{TESS} Sector 36 lightcurve of Luhman~16AB showing epochs of IGRINS visits.}
+\label{fig:Sector36}
+\end{figure*}
+
+Figure ZZ overplots the Sector 10 \texttt{PATHOS} lightcurve of \citet{2021ApJ...906...64A} with our custom reduction.  We see excellent agreement between the two methods.  Our approach apparently offers a more stable lightcurve during the thermal settling windows, with recovery of up to $10\%$ additional time-points residing near the mean-line trend.
 
 \subsection{Digitized Photographic Plates}
 We attempted to recover the position of Luhman~16 from historical photographic plates recently digitized through the \emph{DASCH} project citeXX.  We retrieved a sequence of 34 thumbnails spanning 1926 - 1952.  We matched a constellation of 11 conspicuous stars in the \emph{HST} imaging from \citet{2017MNRAS.470.1140B} (c.f. Figure \ref{fig:imaging}), with each star comparable in magnitude to Luhman~16.  The constellation pattern was barely perceptible in the DASCH images.  An animated sequence of the images yielded no detectable movement in the vicinity of Luhman~16's expected proper motion path.  This non-detection comports with the faint visible band flux of Luhman~16 and the limiting magnitude of $12-14$ for \emph{DASCH}.
