miscellaneous notebook changes

--- a/notebooks/02_lightcurves/07_celerite_TESS_model_TICA.ipynb
+++ b/notebooks/02_lightcurves/07_celerite_TESS_model_TICA.ipynb
@@ -104,6 +104,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lc_s10.time.max().value - lc_s10.time.min().value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lc_s10.plot()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -155,6 +173,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lc_raw.time.max() - lc_raw.time.min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lc_s36.plot()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -196,12 +232,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = lc_s36.plot(label='Sector 36')\n",
-    "lc_s37.plot(ax=ax, label='Sector 37')\n",
-    "plt.plot(lc_s10.time.value + 680, lc_s10.flux.value, label='Sector 10 (Time shifted)', lw=0.5)\n",
-    "ax.legend(loc='best')\n",
+    "lc_s37.time.max() - lc_s37.time.min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lc_s37.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lc_s10_shifted = lc_s10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lc_s10_shifted.time += 680 *u.day"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Attempt at binning..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_bin = 4.7*u.hour\n",
+    "ax = lc_s36.bin(time_bin_size=time_bin).plot()#scatter(label='Sector 36', marker='o', alpha=0.5, ec='k', fc='b', s=20,)\n",
+    "lc_s37.bin(time_bin_size=time_bin).plot(ax=ax)#scatter(ax=ax, label='Sector 37', marker='o', alpha=0.5, ec='k', fc='r')\n",
+    "lc_s10_shifted.bin(time_bin_size=time_bin).plot(ax=ax)#scatter(ax=ax, label='Sector 10 (Time shifted)', marker='o', alpha=0.5, ec='k', fc='g')\n",
+    "ax.legend(loc='best', ncol=3)\n",
     "ax.set_xlabel('Time [BTJD]')\n",
     "#ax.set_ylim(0.85, 1.1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Meh! Might be useful, but let's make a better lightcurve figure first."
    ]
   },
   {
@@ -284,6 +371,15 @@
     "ax.legend(loc='best', ncol=5, fontsize=9)\n",
     "\n",
     "plt.savefig('../../figures/TESS_Periodogram_S10-S37_short.png', bbox_inches='tight', dpi=300)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lc=lc_s36"
    ]
   },
   {
@@ -900,11 +996,110 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Figure for paper"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Import the IGRINS Epochs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('../../data/IGRINS/2021A_metadata_log_CORRECT.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "binary_color_dict = {'A':'#3498db', 'B':'#27ae60'}\n",
+    "binary_line_dict = {'A':'dotted', 'B':'dashed'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = lc.scatter(alpha=1, label=None, marker='o', fc='k', ec='k', s=15)\n",
+    "lc.scatter(ax=ax, alpha=1, label='TESS Sector 36', marker='o', fc='#f1c40f', ec=None, s=10)\n",
+    "ax.step(t_pred, mu, label=None, alpha=0.6, linestyle='solid', color='#2980b9', linewidth=2.0, zorder=10)\n",
+    "ax.step(t_pred, mu, label='Trendline', alpha=1, linestyle='solid', color='#2c3e50', linewidth=0.8, zorder=10)\n",
+    "#ax.fill_between(t_pred, mu-std, mu+std, label='Confidence region', alpha=1, color='#95a5a6', zorder=0)\n",
+    "ax.set_xlim(2285, 2292.5)\n",
+    "#ax.set_ylim(0.992, 0.998)\n",
+    "ax.figure.set_size_inches(9, 4)\n",
+    "ax.set_xlabel('Time [BTJD]')\n",
+    "\n",
+    "for i in range(8):\n",
+    "    AorB = df['Binary Component'][i]\n",
+    "    if AorB == 'B':\n",
+    "        ax.axvline(df.BTJD[i], color=binary_color_dict[AorB], linestyle=binary_line_dict[AorB])\n",
+    "\n",
+    "ax.axvline(-100, color=binary_color_dict[AorB], linestyle=binary_line_dict[AorB], label='IGRINS visits')\n",
+    "plt.legend(loc='best',ncol=3);\n",
+    "\n",
+    "plt.savefig('../../document/paper1/figures/TESS_S36_O1_IGRINS_overlay.png', bbox_inches='tight', dpi=300)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = lc_s36.scatter(label='Sector 36', marker='o', alpha=0.1, ec='k', fc='#d35400', s=10,)\n",
+    "lc_s37.plot(ax=ax)#scatter(ax=ax, label='Sector 37', marker='o', alpha=0.5, ec='k', fc='r')\n",
+    "lc_s10_shifted.plot(ax=ax)#scatter(ax=ax, label='Sector 10 (Time shifted)', marker='o', alpha=0.5, ec='k', fc='g')\n",
+    "ax.legend(loc='best', ncol=3)\n",
+    "ax.set_xlabel('Time [BTJD]')\n",
+    "#ax.set_ylim(0.85, 1.1)"
+   ]
   }
  ],
  "metadata": {
