add a figure with overview of IGRINS order locations

--- a/document/paper1/ms.tex
+++ b/document/paper1/ms.tex
@@ -105,6 +105,15 @@ Figure ZZ overplots the Sector 10 \texttt{PATHOS} lightcurve of \citet{2021ApJ..
 \subsection{Digitized Photographic Plates}
 We attempted to recover the position of Luhman~16 from historical photographic plates recently digitized through the \emph{DASCH} project citeXX.  We retrieved a sequence of 34 thumbnails spanning 1926 - 1952.  We matched a constellation of 11 conspicuous stars in the \emph{HST} imaging from \citet{2017MNRAS.470.1140B} (c.f. Figure \ref{fig:imaging}), with each star comparable in magnitude to Luhman~16.  The constellation pattern was barely perceptible in the DASCH images.  An animated sequence of the images yielded no detectable movement in the vicinity of Luhman~16's expected proper motion path.  This non-detection comports with the faint visible band flux of Luhman~16 and the limiting magnitude of $12-14$ for \emph{DASCH}.
 
+\subsection{Estimates for cloud properties}
+
+\begin{figure*}[ht]
+  \centering
+    \includegraphics[width=\textwidth]{figures/IGRINS_low_resolution_T_bright_labeled.png} \\
+\caption{Brightness temperature in the $H-$ and $K-$ bands for an $f_{\mathrm{sed}}=2$, $T_{\mathrm{eff}}=1300\;$K m demarcated with the \emph{IGRINS} \'echelle order boundaries from $m=125$ to $m=71$.  The peak of the $H-$band probes the deepest and therefore hottest region}
+\label{fig:brightness_temp}
+\end{figure*}
+
 \section{Results}
 State the discoveries here.
 
